fix(client): no more CreateNodeWidget’s select-box width overflow

--- a/packages/xod-client/src/core/styles/components/CreateNodeWidget.scss
+++ b/packages/xod-client/src/core/styles/components/CreateNodeWidget.scss
@@ -8,7 +8,9 @@
   background: #CCC;
   height: 32px;
 
-  select {}
+  select {
+    width: 160px;
+  }
 
   .button-add-node {
     @include button-primary;
